--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       color: white;
-      background-image: url('sasuke-bg.jpg');
+      background-image: url('IMG_20250618_148046.jpg
+        ');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -55,7 +56,7 @@
 <body>
   <div class="overlay">
     <h1>Undangan Syukuran Sunatan</h1>
-    <h2>Angelico Archer Sukma Putra</h2><img src="foto-anak.jpg" alt="Foto Anak" class="foto-anak">
+    <h2>Angelico Archer Sukma Putra</h2><img src="IMG-20250618-WA0009.jpg" alt="Foto Anak">
 
 <div class="box">
   <p>Dengan memohon rahmat dan ridho Allah SWT, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara syukuran khitanan putra kami:</p>
