--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       color: white;
-      background-image: url('IMG_20250618_148046.jpg
-        ');
+      background-image: url('IMG_20250618_140846.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -56,19 +55,19 @@
 <body>
   <div class="overlay">
     <h1>Undangan Syukuran Sunatan</h1>
-    <h2>Angelico Archer Sukma Putra</h2><img src="IMG-20250618-WA0009.jpg" alt="Foto Anak">
+    <h2>Angelico Archer Sukma Putra</h2>
+    <img src="IMG_20250618_WA0009.jpg" alt="Foto Anak" class="foto-anak">
 
-<div class="box">
-  <p>Dengan memohon rahmat dan ridho Allah SWT, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara syukuran khitanan putra kami:</p>
-  <p><strong>Hari/Tanggal:</strong> Sabtu, 21 Juni 2025<br>
-     <strong>Waktu:</strong> Pukul 12.00 – 16.00 WITA<br>
-     <strong>Tempat:</strong> Jl. Joyomulyo 1, Samarinda</p>
-</div>
+    <div class="box">
+      <p>Dengan memohon rahmat dan ridho Allah SWT, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara syukuran khitanan putra kami:</p>
+      <p><strong>Hari/Tanggal:</strong> Sabtu, 21 Juni 2025<br>
+         <strong>Waktu:</strong> Pukul 12.00 – 16.00 WITA<br>
+         <strong>Tempat:</strong> Jl. Joyomulyo 1, Samarinda</p>
+    </div>
 
-<footer>
-  Terima kasih atas doa dan kehadirannya 🙏
-</footer>
-
+    <footer>
+      Terima kasih atas doa dan kehadirannya 🙏
+    </footer>
   </div>
 </body>
 </html>
