--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <img src="IMG_20250618_WA0009.jpg" alt="Foto Anak" class="foto-anak">
 
     <div class="box">
-      <p>Dengan memohon rahmat dan ridho Allah SWT, kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara syukuran khitanan putra kami:</p>
+      <p>Kami mengundang Bapak/Ibu/Saudara/i untuk menghadiri acara syukuran sunatan putra kami:</p>
       <p><strong>Hari/Tanggal:</strong> Sabtu, 21 Juni 2025<br>
          <strong>Waktu:</strong> Pukul 12.00 – 16.00 WITA<br>
          <strong>Tempat:</strong> Jl. Joyomulyo 1, Samarinda</p>
